# OTB

./: .dockerignore  .gitignore  ABCDE.jsonl  LICENSE  README.md  __init__.py  aafide_tournaments.py  bronze.sql  cbx.py  cbx.sql  cbx_comunicados.py  cbx_jogadores.py  cbx_news.py  cbx_noticias.jsonl  cbx_noticias.py  cbx_torneios.py  cbx_utils.py  commit.md  config.py  converter.py  countries.py  cron.py  dockerfile  fide_tournaments.py  gemini.py  gold.sql  main copy.py  main.py  otb.env  package-lock.json  package.json  pyproject.toml  refactor.MD  requirements.txt  seed_db.py  test.py  testar.py  torneios.json
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
api/: auth_api.py
apis/: announcements_api.py  club_api.py  member_api.py  members_api.py  news_api.py  organization_api.py  people_api.py  players_api.py  status_api.py  tournaments_api.py
core/: cache.py  config.py  logger_config.py  rate_limiter.py  schemas.py  utils.py
database/: migration.py  models.py  session.py
db/: migration.py  models.py
frontend/: index.html  script.js
jobs/: scheduler.py  sync_all.py  sync_announcements.py  sync_news.py  sync_players.py  sync_tournaments.py
legacy/: cbx_comunicados.py  cbx_jogadores.py  cbx_noticias.py  cbx_torneios.py  cbx_utils.py  fide_tournaments.py  sync_tournaments.py
normalizers/: how-to-iso.md
numeros/: numeros.csv  numeros.py  numeros_1.csv  numeros_10.csv  numeros_11.csv  numeros_12.csv  numeros_13.csv  numeros_14.csv  numeros_15.csv  numeros_16.csv  numeros_17.csv  numeros_18.csv  numeros_19.csv  numeros_2.csv  numeros_20.csv  numeros_3.csv  numeros_4.csv  numeros_5.csv  numeros_6.csv  numeros_7.csv  numeros_8.csv  numeros_9.csv
(+114 files in other folders)
