[project]
name = "over-the-board"
version = "0.1.0"
description = "Chess Tournament WebScraper "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "async>=0.6.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "requests>=2.32.5",
    "supabase>=2.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.5",
    "pytest>=8.3.4",
]
